Fix button wrapping on firefox mobile

--- a/frontend/less/style.less
+++ b/frontend/less/style.less
@@ -336,6 +336,11 @@ label{
           width:50%;
       }
   }
+  @media (max-device-width: 500px) {
+      .radio{
+          display: block;
+      }
+  }
   .radio{
     padding:0;
     border:1px solid #fff;
